Fix Center Alignment

--- a/project/static/cover2.css
+++ b/project/static/cover2.css
@@ -41,8 +41,8 @@ body {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+  -webkit-box-shadow: inset 0 0 0px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 0px rgba(0,0,0,.5);
 }
 .site-wrapper-inner {
   display: table-cell;
@@ -56,11 +56,10 @@ body {
 /* Padding for spacing */
 .inner {
 
-  padding: 30px;
+  padding: 25px;
 }
-.text_box{
-  border:25px #008B8B;
-  margin:25px;
+div.main_body{
+  margin:50px;
 }
 .vertical-align {
     display: flex;
